--- a/README
+++ b/README
@@ -1,1 +1,2 @@
 This is a free mobile application for webOS. It uses u.nu, is.gd and bit.ly API to shorten links.
+Check the wiki for more technical explanations https://github.com/cawecoy/Total-URL-Shortener/wiki
